force-app/main/default/objects/ReferencePrice__c/fields/AccountSupplierName__c.field-meta.xml
<CustomField>
    <fullName>AccountSupplierName__c</fullName>
    <formula>Account__r.AccountNameENG__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Vendor/Supplier Name</label>
    <type>Text</type>
</CustomField>