force-app/main/default/objects/ReferencePrice__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <formula>TODAY() &lt;  Valid_End_Date__c</formula>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>