force-app/main/default/objects/ReferencePrice__c/fields/Amount4__c.field-meta.xml
<CustomField>
    <fullName>Amount4__c</fullName>
    <label>Amount 4</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>