force-app/main/default/objects/ReferencePrice__c/fields/ChargeUnit__c.field-meta.xml
<CustomField>
    <fullName>ChargeUnit__c</fullName>
    <label>Charge Unit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Charge_Unit</valueSetName>
    </valueSet>
</CustomField>