force-app/main/default/objects/ReferencePrice__c/fields/COM__c.field-meta.xml
<CustomField>
    <fullName>COM__c</fullName>
    <label>COM</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>