force-app/main/default/objects/ReferencePrice__c/fields/Combined_DEMDET_Des__c.field-meta.xml
<CustomField>
    <fullName>Combined_DEMDET_Des__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Combined DEM/DET (Des)</label>
    <type>Checkbox</type>
</CustomField>