force-app/main/default/objects/ReferencePrice__c/fields/CombinedDEMDETdays__c.field-meta.xml
<CustomField>
    <fullName>CombinedDEMDETdays__c</fullName>
    <label>Combined DEM/DET days</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>