force-app/main/default/objects/ReferencePrice__c/fields/Commodity_Category__c.field-meta.xml
<CustomField>
    <fullName>Commodity_Category__c</fullName>
    <label>Commodity Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Value1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>