force-app/main/default/objects/ReferencePrice__c/fields/Commodity_Detail__c.field-meta.xml
<CustomField>
    <fullName>Commodity_Detail__c</fullName>
    <label>Commodity Detail</label>
    <length>255</length>
    <type>Text</type>
</CustomField>