force-app/main/default/objects/ReferencePrice__c/fields/DEM_Dest__c.field-meta.xml
<CustomField>
    <fullName>DEM_Dest__c</fullName>
    <label>DEM (Dest)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>