force-app/main/default/objects/ReferencePrice__c/fields/DEMFreeTimeDurationdays__c.field-meta.xml
<CustomField>
    <fullName>DEMFreeTimeDurationdays__c</fullName>
    <label>DEM-Free Time Duration (days)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>