force-app/main/default/objects/ReferencePrice__c/fields/DestinationCountry__c.field-meta.xml
<CustomField>
    <fullName>DestinationCountry__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Destination Country</label>
    <referenceTo>Country__c</referenceTo>
    <relationshipLabel>Reference Price (Destination Country)</relationshipLabel>
    <relationshipName>Reference_Price1</relationshipName>
    <type>Lookup</type>
</CustomField>