force-app/main/default/objects/ReferencePrice__c/fields/DET_Dest__c.field-meta.xml
<CustomField>
    <fullName>DET_Dest__c</fullName>
    <label>DET (Dest)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>