force-app/main/default/objects/ReferencePrice__c/fields/DETFreeTimeDurationdays__c.field-meta.xml
<CustomField>
    <fullName>DETFreeTimeDurationdays__c</fullName>
    <label>DET-Free Time Duration (days)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>