force-app/main/default/objects/ReferencePrice__c/fields/Export_Country__c.field-meta.xml
<CustomField>
    <fullName>Export_Country__c</fullName>
    <formula>TEXT(  POL__r.Country_Name__c  )</formula>
    <label>Export Country</label>
    <type>Text</type>
</CustomField>