force-app/main/default/objects/ReferencePrice__c/fields/ExternalSalesman__c.field-meta.xml
<CustomField>
    <fullName>ExternalSalesman__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>External Salesman</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.Account.Id</field>
            <operation>equals</operation>
            <valueField>$Source.Account__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Reference Price</relationshipLabel>
    <relationshipName>Reference_Price</relationshipName>
    <type>Lookup</type>
</CustomField>