force-app/main/default/objects/ReferencePrice__c/fields/Import_Country__c.field-meta.xml
<CustomField>
    <fullName>Import_Country__c</fullName>
    <formula>TEXT(  POD__r.Country_Name__c  )</formula>
    <label>Import Country</label>
    <type>Text</type>
</CustomField>