force-app/main/default/objects/ReferencePrice__c/fields/InitialPrice__c.field-meta.xml
<CustomField>
    <fullName>InitialPrice__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Initial Price</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>