force-app/main/default/objects/ReferencePrice__c/fields/Markup__c.field-meta.xml
<CustomField>
    <fullName>Markup__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Markup</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>