force-app/main/default/objects/ReferencePrice__c/fields/Max_Margin_Rate__c.field-meta.xml
<CustomField>
    <fullName>Max_Margin_Rate__c</fullName>
    <label>Max Margin Rate%</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>