force-app/main/default/objects/ReferencePrice__c/fields/Min_Margin_Rate__c.field-meta.xml
<CustomField>
    <fullName>Min_Margin_Rate__c</fullName>
    <label>Min Margin Rate%</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>