force-app/main/default/objects/ReferencePrice__c/fields/Notes_DEMDET_Dest__c.field-meta.xml
<CustomField>
    <fullName>Notes_DEMDET_Dest__c</fullName>
    <label>Notes DEM/DET (Dest)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>