force-app/main/default/objects/ReferencePrice__c/fields/O_F2__c.field-meta.xml
<CustomField>
    <fullName>O_F2__c</fullName>
    <label>O/F 2</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>