force-app/main/default/objects/ReferencePrice__c/fields/OF1__c.field-meta.xml
<CustomField>
    <fullName>OF1__c</fullName>
    <label>O/F 1</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>