force-app/main/default/objects/ReferencePrice__c/fields/OF__c.field-meta.xml
<CustomField>
    <fullName>OF__c</fullName>
    <label>O/F</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>