force-app/main/default/objects/ReferencePrice__c/fields/OriginCountry__c.field-meta.xml
<CustomField>
    <fullName>OriginCountry__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Origin Country</label>
    <referenceTo>Country__c</referenceTo>
    <relationshipLabel>Reference Price</relationshipLabel>
    <relationshipName>Reference_Price</relationshipName>
    <type>Lookup</type>
</CustomField>