force-app/main/default/objects/ReferencePrice__c/fields/PODName__c.field-meta.xml
<CustomField>
    <fullName>PODName__c</fullName>
    <formula>POD__r.PortCode__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>POD Name</label>
    <type>Text</type>
</CustomField>