force-app/main/default/objects/ReferencePrice__c/fields/POL__c.field-meta.xml
<CustomField>
    <fullName>POL__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>POL</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>PortCode__c.Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>PortCode__c</referenceTo>
    <relationshipLabel>Reference Price</relationshipLabel>
    <relationshipName>Reference_Price</relationshipName>
    <type>Lookup</type>
</CustomField>