force-app/main/default/objects/ReferencePrice__c/fields/POLName__c.field-meta.xml
<CustomField>
    <fullName>POLName__c</fullName>
    <formula>POL__r.PortCode__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>POL Name</label>
    <type>Text</type>
</CustomField>