force-app/main/default/objects/ReferencePrice__c/fields/Quotation_No__c.field-meta.xml
<CustomField>
    <fullName>Quotation_No__c</fullName>
    <label>Quotation No</label>
    <length>255</length>
    <type>Text</type>
</CustomField>