force-app/main/default/objects/ReferencePrice__c/fields/Route_Type__c.field-meta.xml
<CustomField>
    <fullName>Route_Type__c</fullName>
    <label>Route Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Value1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>