force-app/main/default/objects/ReferencePrice__c/fields/Service__c.field-meta.xml
<CustomField>
    <fullName>Service__c</fullName>
    <label>Service</label>
    <length>255</length>
    <type>Text</type>
</CustomField>