force-app/main/default/objects/ReferencePrice__c/fields/ST_Dest__c.field-meta.xml
<CustomField>
    <fullName>ST_Dest__c</fullName>
    <label>ST (Dest)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>