force-app/main/default/objects/ReferencePrice__c/fields/Surcharge_1__c.field-meta.xml
<CustomField>
    <fullName>Surcharge_1__c</fullName>
    <label>Surcharge 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>