force-app/main/default/objects/ReferencePrice__c/fields/Surcharge_2__c.field-meta.xml
<CustomField>
    <fullName>Surcharge_2__c</fullName>
    <label>Surcharge 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>