force-app/main/default/objects/ReferencePrice__c/fields/Surcharge_3__c.field-meta.xml
<CustomField>
    <fullName>Surcharge_3__c</fullName>
    <label>Surcharge 3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>