force-app/main/default/objects/ReferencePrice__c/fields/Total_Surcharge__c.field-meta.xml
<CustomField>
    <fullName>Total_Surcharge__c</fullName>
    <formula>Amount_1__c + Amount_2__c + Amount_3__c + Amount4__c + Amount_5__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Surcharge</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>