force-app/main/default/objects/ReferencePrice__c/fields/TotalINCLCom__c.field-meta.xml
<CustomField>
    <fullName>TotalINCLCom__c</fullName>
    <formula>TotalNICCom__c + COM__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total (INCL Com)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>