force-app/main/default/objects/ReferencePrice__c/fields/TotalNICCom__c.field-meta.xml
<CustomField>
    <fullName>TotalNICCom__c</fullName>
    <formula>Total_Surcharge__c + OF__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total (NIC Com)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>