force-app/main/default/objects/ReferencePrice__c/fields/Transit_Time__c.field-meta.xml
<CustomField>
    <fullName>Transit_Time__c</fullName>
    <label>Transit Time</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>