force-app/main/default/objects/ReferencePrice__c/fields/TT__c.field-meta.xml
<CustomField>
    <fullName>TT__c</fullName>
    <label>T/T</label>
    <length>255</length>
    <type>Text</type>
</CustomField>