force-app/main/default/objects/ReferencePrice__c/fields/Type2__c.field-meta.xml
<CustomField>
    <fullName>Type2__c</fullName>
    <formula>TEXT(ContainerType__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Type2</label>
    <type>Text</type>
</CustomField>