force-app/main/default/objects/ReferencePrice__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>RF Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ServiceType</valueSetName>
    </valueSet>
</CustomField>