force-app/main/default/objects/ReferencePrice__c/fields/Type_of_Cargo__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Cargo__c</fullName>
    <label>Type of Cargo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>General</fullName>
            </value>
            <value>
                <fullName>Dangerous</fullName>
            </value>
            <value>
                <fullName>Refrigerated</fullName>
            </value>
            <value>
                <fullName>Volume Cargo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>