force-app/main/default/objects/ReferencePrice__c/fields/Unit_Price_Of_Selling_FCY__c.field-meta.xml
<CustomField>
    <fullName>Unit_Price_Of_Selling_FCY__c</fullName>
    <label>Unit Price Of Selling (FCY)</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>