force-app/main/default/objects/ReferencePrice__c/fields/UnitPriceofBuying__c.field-meta.xml
<CustomField>
    <fullName>UnitPriceofBuying__c</fullName>
    <label>Buying List Price (Actual)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>