force-app/main/default/objects/ReferencePrice__c/fields/UnitPriceOfBuyingVND__c.field-meta.xml
<CustomField>
    <fullName>UnitPriceOfBuyingVND__c</fullName>
    <label>Unit Price Of Buying (VND)</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>