force-app/main/default/objects/ReferencePrice__c/fields/UnitPriceOfSellingLocal__c.field-meta.xml
<CustomField>
    <fullName>UnitPriceOfSellingLocal__c</fullName>
    <label>Unit Price Of Selling (Local)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>