force-app/main/default/objects/ReferencePrice__c/fields/Valid_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Valid_End_Date__c</fullName>
    <label>Valid End Date</label>
    <type>Date</type>
</CustomField>