force-app/main/default/objects/ReferencePrice__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Route__c</columns>
    <columns>ServiceName__c</columns>
    <columns>ServiceType__c</columns>
    <columns>Valid_End_Date__c</columns>
    <columns>Valid_Start_Date__c</columns>
    <columns>UnitPriceofBuying__c</columns>
    <columns>COM__c</columns>
    <columns>ChargeUnit__c</columns>
    <columns>ContainerType__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>